--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <h1 id="id-new-videos">
                         NEW VIDEOS
                     </h1>
-                    <ul class="thumbnails", id="video_thumbnails" >
+                    <ul class="thumbnails" id="video_thumbnails" >
                       
                         
                     </ul>
